--- a/SportsStore6/Views/Shared/_Layout.cshtml
+++ b/SportsStore6/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar navbar-dark bg-dark" role="navigation">
         <div class="row">
-            <a class="col navbar-brand" href="#">SPORTS STORE</a>
+            <a class="col navbar-brand" href="#">SPORTS STORE 6</a>
             <div class="col-4 text-right">
                 @await Component.InvokeAsync("CartSummary")
             </div>
