--- a/SportsStore6/Views/Shared/_AdminLayout.cshtml
+++ b/SportsStore6/Views/Shared/_AdminLayout.cshtml
@@ -2,10 +2,18 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" asp-href-include="lib/bootstrap/dist/css/*.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" asp-href-include="/lib/fontawesome/css/*.css" />
     <title>@ViewBag.Title</title>
+    <style>
+        .input-validation-error {
+            border-color: red;
+            background-color: #fee;
+        }
+    </style>
 </head>
 <body class="m-1 p-1">
-    <div class="bg-info p-2"><h4>@ViewBag.Title</h4></div>@RenderBody()
+    <div class="bg-info p-2"><h4>@ViewBag.Title</h4></div>@if (TempData["message"] != null)
+    {<div class="alert alert-success">@TempData["message"]</div>}@RenderBody()
 </body>
 </html>
