--- a/SportsStore6/Views/_ViewImports.cshtml
+++ b/SportsStore6/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using SportsStore6.Models
 @using SportsStore6.Models.ViewModels
 @using SportsStore6.Infrastructure
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelper
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper SportsStore6.Infrastructure.*, SportsStore6
